Archive2/62/dffb457ca3eb6a/output
main.cpp:9:46: error: use of undeclared identifier '__FUNCDNAME__'
    func_sig func = (func_sig) dlsym(handle, __FUNCDNAME__);
                                             ^
main.cpp:21:47: error: use of undeclared identifier '__FUNCDNAME__'
    static func_sig func = get_func<func_sig>(__FUNCDNAME__);
                                              ^
main.cpp:27:47: error: use of undeclared identifier '__FUNCDNAME__'
    static func_sig func = get_func<func_sig>(__FUNCDNAME__);
                                              ^
3 errors generated.
